# FintechCheckAI

./: .env.example  .gitignore  BACKEND_README.md  BACKEND_TASKS.md  COMPLETION_SUMMARY.md  DOCKER_SETUP.md  DOCUMENTATION_GAPS.md  FRONTEND_INTEGRATION_SUMMARY.md  LICENSE  Procfile  QUICK_START.md  README.md  SETUP_COMPLETE.md  TROUBLESHOOTING.md  docker-compose.yml  main.py  render.yaml  run_complete_test.py  run_server.py  start_server.bat  start_server.sh
backend/: .dockerignore  .env.example  .pylintrc  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/agents/: chunk_retriever.py  claim_extractor.py  verification_agent.py
backend/api/: dependencies.py
backend/api/middleware/: rate_limit.py
backend/api/routes/: ai_agent.py  companies.py  documents.py  verification.py  version_diff.py  youtube.py
backend/app/: main.py
backend/app/api/: documents.py  verification.py  youtube.py
backend/app/core/: dependencies.py
backend/app/models/: schemas.py
backend/core/: config.json  config.py  logging.py
backend/etl/: normalizer.py  pdf_downloader.py  pdf_processor.py
backend/models/: responses.py  schemas.py
backend/services/: README.md  ai_agent_service.py  opik_service.py  pdf_service.py  rag_service.py  tower_service.py  youtube_service.py
backend/tower/apps/chunk-storage/: Towerfile  main.py  pyproject.toml
backend/tower/apps/document-ingestion/: Towerfile  main.py  pyproject.toml
backend/tower/apps/rag-chunk-query/: Towerfile  (+2 more)
backend/tower/schemas/: chunks.sql  companies.sql
backend/utils/: validators.py
(+93 files in other folders)
