[project]
name = "fintech-check-ai"
version = "0.1.0"
description = "Fact-checking platform for YouTube claims against quarterly reports."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.6.0",
  "pymupdf>=1.24.0",
  "rapidocr-onnxruntime>=1.3.2",
  "pillow>=10.0.0",
]

[tool.uv]
