[project]
name = "fintech-check-ai"
version = "0.1.0"
description = "AI-powered fact-checking platform for financial documents and video content. Verifies claims made in YouTube videos against official company quarterly reports with immutable versioned storage."
authors = [
    {name = "Sebastian Russo", email = ""}
]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.6.0",
  "pymupdf>=1.24.0",
  "rapidocr-onnxruntime>=1.3.2",
  "pillow>=10.0.0",
  "python-multipart>=0.0.6",
  "openai>=1.0.0",
  "slowapi>=0.1.9",
]

[tool.uv]
